# Agentos

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
