[project]
name = "agentos"
version = "0.1.0"
description = "Hexagonal Architecture AI Agent OS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "sqlalchemy>=2.0.31",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "alembic>=1.18.5",
    "psycopg[binary]>=3.3.4",
    "structlog>=26.1.0",
    "loguru>=0.7.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
